--- a/src/auto_nav/config_params/dwa_local_planner_params.yaml
+++ b/src/auto_nav/config_params/dwa_local_planner_params.yaml
@@ -1,29 +1,29 @@
 DWAPlannerROS:
 
 # Robot Configuration Parameters - Kobuki
-  max_vel_x: 0.45  # 0.55
-  min_vel_x: 0.0
+  max_vel_x: 0.45 #0.45  # 0.55
+  min_vel_x: 0.0 #0.0
 
   max_vel_y: 0.0  # diff drive robot
   min_vel_y: 0.0  # diff drive robot
 
-  max_trans_vel: 0.45 # choose slightly less than the base's capability
-  min_trans_vel: 0.1  # this is the min trans velocity when there is negligible rotational velocity
+  max_trans_vel: 0.45  #0.45 # choose slightly less than the base's capability
+  min_trans_vel: 0.1 #0.1  # this is the min trans velocity when there is negligible rotational velocity
 
   # Warning!
   #   do not set min_trans_vel to 0.0 otherwise dwa will always think translational velocities
   #   are non-negligible and small in place rotational velocities will be created.
 
-  max_rot_vel: 1.0  # choose slightly less than the base's capability
-  min_rot_vel: 0.5  # this is the min angular velocity when there is negligible translational velocity
+  max_rot_vel: 1.0 #1.0  # choose slightly less than the base's capability
+  min_rot_vel: 0.5 #0.5  # this is the min angular velocity when there is negligible translational velocity
 
   acc_lim_x: 0.5 # maximum is theoretically 2.0, but we
   acc_lim_th: 0.5
   acc_lim_y: 0.0      # diff drive robot
 
 # Goal Tolerance Parameters
-  yaw_goal_tolerance: 0.2  # 0.05
-  xy_goal_tolerance: 0.20  # 0.10
+  yaw_goal_tolerance: 0.05  # 0.05
+  xy_goal_tolerance: 0.1 # 0.10
   # latch_xy_goal_tolerance: false
 
 # Forward Simulation Parameters
