Changed velocity_msg to motor_msg and removed front and back motor message variables.

--- a/src/auto_nav/CMakeLists.txt
+++ b/src/auto_nav/CMakeLists.txt
@@ -54,7 +54,7 @@ include_directories(
 add_message_files(
   FILES
   ticks_msg.msg
-  velocity_msg.msg
+  motor_msg.msg
   tuning_msg.msg
   pid_response.msg
   base_params_msg.msg
