--- a/src/auto_nav/package.xml
+++ b/src/auto_nav/package.xml
@@ -52,8 +52,10 @@
   <build_depend>rospy</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>move_base_msgs</build_depend>
   <build_export_depend>rospy</build_export_depend>
   
+  <exec_depend>move_base_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_msgs</exec_depend>
