--- a/src/cam/package.xml
+++ b/src/cam/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>perception</name>
+  <name>cam</name>
   <version>0.0.0</version>
   <description>The perception package</description>
 
